--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,8 +29,8 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>-->
+                    </li>-->
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -44,9 +44,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To 4-H Jackson County Computing Club!</div>
-                <div class="intro-heading">Take a look at what we do!</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Welcome to</div>
+                <div class="intro-heading">4-H Jackson Country Computing Club!!!</div>
+                <a href="#services" class="page-scroll btn btn-xl">Take a look around</a>
             </div>
         </div>
     </header>
