--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,13 +3,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Projects by Year</h2>
-                    <h3 class="section-subheading text-muted">A detailed overview of our activities by year. Click to expand.</h3>
+                    <h2 class="section-heading">Past Projects</h2>
+                    <h3 class="section-subheading text-muted">Details about our past activities by year. Click to expand.</h3>
                 </div>
             </div>
             <div class="row">
             {% for post in site.posts %}
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-6 col-sm-6 portfolio-item">
                     <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
