--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -176,7 +176,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Atomic Age","Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: "Monaco","Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.data.template.color.primary }};
 }
 
