--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,10 +24,10 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
-                    <!--<li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>-->
                     <li>
@@ -46,7 +46,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome to</div>
                 <div class="intro-heading">4-H Jackson Country Computing Club!!!</div>
-                <a href="#services" class="page-scroll btn btn-xl">Take a look around</a>
+                <a href="#about" class="page-scroll btn btn-xl">2020 Virtual Club</a>
             </div>
         </div>
     </header>
