added more circles and changed description

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,12 +12,12 @@ About Section
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/1.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">October</h4>
+                                    <h4>October 2020</h4>
+                                    <!--<h4 class="subheading">October</h4>-->
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Welcome! We will do icebreakers and go over an intro to artificial intelligence (AI).</p>
@@ -26,12 +26,12 @@ About Section
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/2.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">November</h4>
+                                    <h4>November 2020</h4>
+                                    <!--<h4 class="subheading">November</h4>-->
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Learn about computer vision and play with <a href="https://teachablemachine.withgoogle.com/train">Teachable Machine</a></p>
@@ -44,8 +44,8 @@ About Section
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">January</h4>
+                                    <h4>January 2021</h4>
+                                    <!--<h4 class="subheading">January</h4>-->
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Discuss applications and ethics of AI. Play with more cool simulations!</p>
@@ -58,8 +58,8 @@ About Section
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">February</h4>
+                                    <h4>February 2021</h4>
+                                    <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Hands-on intro to Arduino</p>
@@ -68,7 +68,36 @@ About Section
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Join
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>March 2021</h4>
+                                    <!--<h4 class="subheading">February</h4>-->
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">More Arduino activities and a refresher on AI</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>April 2021</h4>
+                                    <!--<h4 class="subheading">February</h4>-->
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted"><a href="https://experiments.withgoogle.com/tiny-sorter/view">Tiny Sorter</a> project!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4> 
+                                    <br>Join
                                     <br>Us!</h4>
                             </div>
                         </li>
