changed button text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome to</div>
                 <div class="intro-heading">4-H Jackson County Computing Club!!!</div>
-                <a href="#about" class="page-scroll btn btn-xl">2020 Virtual Club</a>
+                <a href="#about" class="page-scroll btn btn-xl">Virtual STEM Club</a>
             </div>
         </div>
     </header>
