--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">2020-2021 Virtual STEM Club</h2>
-                    <h3 class="section-subheading text-muted">Roadmap for our monthly meetings</h3>
+                    <h3 class="section-subheading text-muted">Roadmap for our monthly meetings. Meeting resources will also be posted here.</h3>
                 </div>
             </div>
             <div class="row">
@@ -20,7 +20,7 @@
                                     <!--<h4 class="subheading">October</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Welcome! We will do icebreakers and go over an intro to artificial intelligence (AI).</p>
+                                    <p class="text-muted">Welcome! We will do icebreakers and go over an intro to artificial intelligence (AI). <a href="../files/Session1.pdf">Slideshow</a></p>
                                 </div>
                             </div>
                         </li>
