--- a/_includes/services.html
+++ b/_includes/services.html
@@ -29,8 +29,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-mouse-pointer fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Virutal STEM Club 2020</h4>
-                    <p class="text-muted">A 5-county virtual STEM club focusing on artificial intelligence (AI) will be held in 2020-2021</p>
+                    <h4 class="service-heading">Virutal STEM Club 2020-2021</h4>
+                    <p class="text-muted">A 5-county virtual STEM club about hands-on STEM activities and artificial intelligence (AI) will be held in 2020-2021</p>
                 </div>
             </div>
         </div>
