--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
                                     <!--<h4 class="subheading">October</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Welcome! We will do icebreakers and go over an intro to artificial intelligence (AI). <a href="../files/Session1.pdf">Slideshow</a></p>
+                                    <p class="text-muted">Welcome! We will do icebreakers and go over an intro to artificial intelligence (AI). <br><a href="../files/Session1.pdf">Slideshow</a></p>
                                 </div>
                             </div>
                         </li>
