--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -176,7 +176,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Orbitron","Helvetica Neue",Helvetica,Arial,sans-serif,cursive;
+    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,sans-serif,cursive;
     color: #{{ site.data.template.color.primary }};
 }
 
