--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,7 @@
                                     <!--<h4 class="subheading">November</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Learn about computer vision and play with <a href="https://teachablemachine.withgoogle.com/train">Teachable Machine</a></p>
+                                    <p class="text-muted">Hands-on activity<br>Learn about computer vision and play with <a href="https://teachablemachine.withgoogle.com/train">Teachable Machine</a></p>
                                 </div>
                             </div>
                         </li>
@@ -48,7 +48,7 @@
                                     <!--<h4 class="subheading">January</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Discuss applications and ethics of AI. Play with more cool simulations!</p>
+                                    <p class="text-muted">Hands-on activity<br>Discuss applications and ethics of AI. Play with more cool simulations!</p>
                                 </div>
                             </div>
                         </li>
@@ -62,7 +62,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on intro to Arduino</p>
+                                    <p class="text-muted">Hands-on activity<br>Hands-on intro to Arduino</p>
                                 </div>
                             </div>
                         </li>
@@ -76,7 +76,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">More Arduino activities and a refresher on AI</p>
+                                    <p class="text-muted">Hands-on activity<br>More Arduino activities and a refresher on AI</p>
                                 </div>
                             </div>
                         </li>
@@ -90,7 +90,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><a href="https://experiments.withgoogle.com/tiny-sorter/view">Tiny Sorter</a> project!</p>
+                                    <p class="text-muted">Hands-on activity<br><a href="https://experiments.withgoogle.com/tiny-sorter/view">Tiny Sorter</a> project!</p>
                                 </div>
                             </div>
                         </li>
