--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">2020-2021 Virtual STEM Club</h2>
+                    <h2 class="section-heading">2020-2021 Virtual SPARK STEM Club</h2>
                     <h3 class="section-subheading text-muted">Roadmap for our monthly meetings. Meeting resources will also be posted here.</h3>
                 </div>
             </div>
