--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,10 @@
                         <a class="page-scroll" href="#services">Summary</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
+                        <a class="page-scroll" href="#portfolio">Past Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#STEM Club">About</a>
+                        <a class="page-scroll" href="#about">STEM Club</a>
                     </li>
                     <!--<li>
                         <a class="page-scroll" href="#team">Team</a>
