--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,7 @@
                                     <!--<h4 class="subheading">November</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>Learn about computer vision and play with <a href="https://teachablemachine.withgoogle.com/train">Teachable Machine</a></p>
+                                    <p class="text-muted">Hands-on activity<br>Learn about computer vision and play with Teachable Machine</p>
                                 </div>
                             </div>
                         </li>
