--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Coding</h4>
-                    <p class="text-muted">We have learned and practiced both Scratch (2016) and Python (2019) in the summer.</p>
+                    <p class="text-muted">We have learned and practiced Scratch (2016), RobotC (2017 & 2018), and Python (2019) in the summer.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
