--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -31,7 +31,7 @@
                 <p class="help-block text-danger"></p>
 		</div>
               </div>
-              <div class="form-group">
+              <!--<div class="form-group">
 		<div class="input-group">
 		<span class="input-group-addon"><i class="fa fa-phone fa-fw"></i></span>
                 <input type="tel"
@@ -41,7 +41,7 @@
 		       data-validation-required-message="Please enter your phone number.">
 		<input type="text" id="_gotcha" style="display:none" />
                 <p class="help-block text-danger"></p>
-		</div>
+		</div>-->
               </div>
             </div>
             <div class="col-md-6">
