--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Contact me</h2>
+        <h2 class="section-heading">Contact Us</h2>
         <h3 class="section-subheading text-muted" style="color:white;">
-	  I look forward to hearing from you
+	 If you like to sign up club activities or have quesitons, please fill the form to contact us. 
 	</h3>
       </div>
     </div>
