--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -60,6 +60,23 @@
             </div>
           </div>
         </form>
+	    
+	    <form method="POST" action="https://formspree.io/4hjccc@gmail.com">
+<div class="form__input half">
+  <label for="name">Name</label>
+  <input type="text" name="Name" autocomplete="name" required>
+</div>
+<div class="form__input input half">
+  <label for="email">Email</label>
+  <input type="email" name="Email" autocomplete="email" required>
+</div>
+<div class="form__input">
+  <label for="message">Message</label>
+  <textarea type="text" name="Message" rows="7" autocomplete="message" required></textarea>
+</div>
+<button class="btn" type="submit">Send</button>
+</form>
+	    
       </div>
     </div>
   </div>
