--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Contact Us</h2>
+        <h2 class="section-heading">Contact Us:</h2>
         <h3 class="section-subheading text-muted" style="color:white;">
 	 If you like to sign up club activities or have quesitons, please fill the form to contact us. 
 	</h3>
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <form name="sentMessage" id="contactForm">
+        <!--<form name="sentMessage" id="contactForm">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
@@ -59,7 +59,7 @@
               <button type="submit" class="btn btn-xl">Send Message</button>
             </div>
           </div>
-        </form>
+        </form>-->
 	    
 	    <form method="POST" action="https://formspree.io/4hjccc@gmail.com">
 <div class="form__input half">
