--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,3 +1,3 @@
 <section>
-<form method="POST", action="https://formspree.io/4hjccc@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+<form method="POST", action="https://formspree.io/4hjccc@gmail.com"><input type="email" name="_replyto"><textarea  name="body"></textarea><input type="submit" value="Send1"></form>
 </section>
