--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,6 +11,6 @@
   <label for="message">Message</label>
   <textarea type="text" name="Message" rows="7" autocomplete="message" required></textarea>
 </div>
-<button class="btn" type="submit">Send</button>
+<button class="btn" type="submit">Send!</button>
 </form>
 
