--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,16 +1,40 @@
-<form method="POST" action="https://formspree.io/4hjccc@gmail.com">
-<div class="form__input half">
-  <label for="name">Name</label>
-  <input type="text" name="Name" autocomplete="name" required>
-</div>
-<div class="form__input input half">
-  <label for="email">Email</label>
-  <input type="email" name="Email" autocomplete="email" required>
-</div>
-<div class="form__input">
-  <label for="message">Message</label>
-  <textarea type="text" name="Message" rows="7" autocomplete="message" required></textarea>
-</div>
-<button class="btn" type="submit">Send!</button>
-</form>
+<section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact Us</h2>
+                    <h3 class="section-subheading text-muted">If you are intereted in signing up club activities or have questions, please fill the form to contact us.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form method="POST" action="https://formspree.io/4hjccc@gmail.com">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="control-group form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="control-group form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="control-group form-group">
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
