added Jan LED tutorial and slideshows

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -48,7 +48,7 @@
                                     <!--<h4 class="subheading">January</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>Discuss applications and ethics of AI. Play with more cool simulations!</p>
+                                    <p class="text-muted">Hands-on activity<br>Arduino LED Blink Activity <br><a href="../files/LED_directions.pdf">Tutorial Slideshow</a> <br><a href="../files/LED_tutorial.mp4">Tutorial Video</a></p>
                                 </div>
                             </div>
                         </li>
@@ -62,7 +62,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>Hands-on intro to Arduino</p>
+                                    <p class="text-muted">Hands-on activity<br>More on Arduino</p>
                                 </div>
                             </div>
                         </li>
@@ -76,7 +76,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>More Arduino activities and a refresher on AI</p>
+                                    <p class="text-muted">Hands-on activity<br>AI refresher and begin working on Tiny Sorter project</p>
                                 </div>
                             </div>
                         </li>
