added nov slides, jan slides

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,7 @@
                                     <!--<h4 class="subheading">November</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>Learn about computer vision and play with Teachable Machine</p>
+                                    <p class="text-muted">Hands-on activity<br>Learn about computer vision and play with<a href="https://teachablemachine.withgoogle.com/train">Teachable Machine</a> <br><a href="../files/November.pdf">Slideshow</a></p>
                                 </div>
                             </div>
                         </li>
@@ -48,7 +48,7 @@
                                     <!--<h4 class="subheading">January</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>Arduino LED Blink Activity <br><a href="../files/LED_directions.pdf">Tutorial Slideshow</a> <br><a href="../files/LED_tutorial.mp4">Tutorial Video</a></p>
+                                    <p class="text-muted">Hands-on activity<br>Arduino LED Blink Activity <br><a href="../files/January.pdf">Class Slideshow</a><br><a href="../files/LED_directions.pdf">Tutorial Slideshow</a> <br><a href="../files/LED_tutorial.mp4">Tutorial Video</a></p>
                                 </div>
                             </div>
                         </li>
