--- a/_includes/about.html
+++ b/_includes/about.html
@@ -62,7 +62,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>More on Arduino</p>
+                                    <p class="text-muted">Hands-on activity<br>Servo Motor and Arduino activity <br><a href="../files/ServoInstructions.pdf">Servo Motor Instructions</a></p>
                                 </div>
                             </div>
                         </li>
