--- a/_includes/about.html
+++ b/_includes/about.html
@@ -76,7 +76,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br>AI refresher and begin working on Tiny Sorter project</p>
+                                    <p class="text-muted">Hands-on activity<br>Guest Speaker</p>
                                 </div>
                             </div>
                         </li>
@@ -90,7 +90,7 @@
                                     <!--<h4 class="subheading">February</h4>-->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hands-on activity<br><a href="https://experiments.withgoogle.com/tiny-sorter/view">Tiny Sorter</a> project!</p>
+                                    <p class="text-muted">Hands-on activity<br><a href="https://experiments.withgoogle.com/tiny-sorter/view">Tiny Sorter</a> project!<br><a href="../files/Tiny_sorter_mod.txt">Arduino code</a></p>
                                 </div>
                             </div>
                         </li>
